--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\Users\Asterisk\AppData\Local\Programs\Python\Python310
+home = D:\ProgramData\Anaconda3
 include-system-site-packages = false
-version = 3.10.6
+version = 3.9.7
