--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ packaging==24.2
 pefile==2023.2.7
 pyinstaller==6.11.1
 pyinstaller-hooks-contrib==2024.11
+pywin32==308
 pywin32-ctypes==0.2.3
 zipp==3.21.0
